--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
         font-family: "Nunito", sans-serif;
         margin: 0;
       }
+
+      html,
+      body,
+      #root {
+        height: 100vh;
+      }
     </style>
     <title>Foodify React App</title>
   </head>
