--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <title>Foodify React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
     <div id="root"></div>
   </body>
 </html>
