added google nearbysearch api

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <title>Foodify React App</title>
   </head>
   <body>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAO_AswjQW9ZtbedjSwaM0GnTAY8zSJpoo&libraries=places"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAO_AswjQW9ZtbedjSwaM0GnTAY8zSJpoo&libraries=places"></script> -->
     <div id="root"></div>
   </body>
 </html>
